# mail-processor

./: .env.example  .gitignore  README.md  pyproject.toml
mail_processor/: __main__.py  authenticate.py  cli.py  config.py  constants.py  errors.py  logger.py  services.py  synchronizer.py
mail_processor/database/: connection.py
mail_processor/models/: __init__.py  message.py  message_info.py
mail_processor/rule_engine/: __init__.py  schema.py
samples/: rules.json
